welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
move(nbPas: Int,versLAvant: Boolean){

  for(pas<-1 to nbPas){avance()} 
  	if (versLAvent==true){
  	}else{
    	recule()
    
  }
}